..F....... [ZBXNEXT-2662] Removed 'nowrap' from filter cell to correct multisect item wrapping; fixed highlight animation on keyboard
git-svn-id: svn://svn.zabbix.com/branches/dev@53228 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBXNEXT-2662/sass/stylesheets/sass/screen.scss
+++ b/ZBXNEXT-2662/sass/stylesheets/sass/screen.scss
@@ -634,7 +634,6 @@ footer {
 	background: $white;
 
 	.cell {
-		white-space: nowrap;
 		text-align: left;
 		padding: 0 20px;
 		border-right: 1px solid #e9edf2;
@@ -703,7 +702,6 @@ footer {
 			display: inline-block;
 			margin: 2px 14px 0 0;
 			white-space: nowrap;
-			@include transition(background .2s ease);
 
 			&.selected {
 
@@ -2392,7 +2390,6 @@ td.disaster-bg {
 	text-decoration: none;
 	cursor: pointer;
 	@include border-radius(2px);
-	@include transition(background .2s ease);
 
 	&:hover {
 		background: $lighter-grey;
